# aces-high

./: README.md  pyproject.toml  requirements.txt
src/aces_high/: __init__.py  __main__.py  cribtools.py  deck.py  scorers.py
tests/: test_deck.py  test_scorers.py
